# software-gui

./: .gitmodules  CMakeLists.txt  main.cpp
core/: CMakeLists.txt  sogui.h  sogui_view.cpp  sogui_view.h
core/application/: sogui_application.cpp  sogui_application.h
